# ledmatrix

./: .gitignore  Doxygen.cfg  build.xml  matrix.sch
adaptation_arduino/led_font/: .gitignore  Makefile
adaptation_arduino/led_font/src/: projet1.c
adaptation_arduino/led_rolling_four_matrices/: project1
adaptation_arduino/led_rolling_one_matrice/: Makefile  project1
adaptation_arduino/led_rolling_one_matrice/src/: projet1.c
adaptation_arduino/led_scroll/: Makefile  project1
adaptation_arduino/led_text/: project1
application/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  TODO  application_2.0-1_amd64.deb  backup-121320130015-pre-application.tgz  conf.ini  config.h.in  configure  configure.ac  description-pak  readme.md
application/clientsrc/: CMakeLists.txt  Makefile.am  Makefile.in  ledmatrix  main.c
application/electronic/: chipselect-project.net  chipselect-project.pcb-  chipselect-project.ps  chipselect-schema.ps  chipselect.project  chipselect.ps
application/fonts/: arial.font  basic.font
application/scripts/: messengeo.php
application/serversrc/: CMakeLists.txt  Makefile.am  Makefile.in  animate.c  animate.h  constant.h  daemon.c  daemon.h  display.c  font.c  font.h  ini.c  ini.h  ledmatrix.c  ledmatrix.h  ledmatrixServer  main.c  newspaper.c  plugins.c  plugins.h  process.c  process.h  server.c  tools.c  tools.h
application/serversrc/plugins/: CMakeLists.txt  Makefile.am  Makefile.in  animation.c  animation.h  blink.c  example.c  gif.c  gif.h  none.c  scrollh.c  scrollv.c
blink/: Makefile
generatorFont/: generator.html
ino/: project1  projet1.c
led_rolling/src/: projet1.c
led_text/: project1
led_text/src/: projet1.c
matrix/: .gitignore  Makefile  matrix
matrix/src/: matrix.c
microcontroller/: config.h  declare.h  micro.layout
newspaper/: .gitignore  Doxygen.cfg  Makefile  Makefile.am  Makefile.in  algo.txt  config.h.in  configure  configure.ac  test
newspaper/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
newspaper/electronic/: chipselect-project.cmd  chipselect-project.net  chipselect-project.pcb  chipselect-project.pcb-  chipselect-project.ps  chipselect.sch
newspaper/fonts/: basic.font
newspaper/scripts/: ephemeride.php  messengeo.php
newspaper/src/: .gitignore  Makefile.am  Makefile.in  aipointe.h  animate.c  animate.h  animationgif.c  animationgif.h  animationpool.c  animationpool.h  arial8.h  bit_array.c  bit_array.h  display.c  display.h  font.c  font.h  ini.h  ledmatrix.c  ledmatrix.h  newspaper.c  newspaper.conf  perso.h  plugins.c  plugins.h  test.c
newspaper/src/.deps/: animate.Po  animationgif.Po  animationpool.Po  bit_array.Po  display.Po  font.Po  ledmatrix.Po  newspaper.Po
newspaper/src/plugins/: Makefile.am  Makefile.in  animation.c  animation.h  blink.c  gif.c  gif.h  intervalle.c  scrollh.c  scrollv.c
newspaper/testing/: test.c
other_arch/adaptation_arduino/led_font/: project1
other_arch/adaptation_arduino/led_rolling_four_matrices/src/: projet1.c
other_arch/adaptation_arduino/led_scroll/src/: aipointe.h  projet1.c
other_arch/adaptation_arduino/led_text/src/: projet1.c
other_arch/microcontroller/: main.c  micro.cbp
py-matrix/: README.md  ht1632c.py  matrix_test.py
py-matrix/fonts/: arial_8.py
py-matrix/modules/bitarray-0.8.1/bitarray.egg-info/: SOURCES.txt
sandbox/blink/: blink  blink.c
sandbox/matrix/src/: matrix.c
sandbox/spi/: spi
sandbox/spi2/: Makefile  spi2  spi2.c
spi/: Makefile  spi.c
spi2/: serial2parallel.sch
