bin_PROGRAMS = newspaper
newspaper_SOURCES = \
	animate.c \
	animationpool.c \
	display.c \
	ledmatrix.c \
	animationgif.c \
	bit_array.c \
	font.c \
	newspaper.c \
        ini.c \
	aipointe.h \
	animationpool.h \
	font.h \
	animate.h \
	bit_array.h \
	ledmatrix.h \
	animationgif.h \
	display.h \
	perso.h \
        ini.h

newspaperconfdir=/etc/newspaper
newspaperconf_DATA=../conf.ini
