bin_PROGRAMS = newspaper
newspaper_SOURCES = \
    animate.c \
    display.c \
    ledmatrix.c \
    bit_array.c \
    font.c \
    newspaper.c \
    plugins.c \
    plugins/animation.c \
    aipointe.h \
    font.h \
    animate.h \
    bit_array.h \
    ledmatrix.h \
    display.h \
    perso.h \
    plugins.h \
    plugins/animation.h \
    ini.c \
    ini.h

