bin_PROGRAMS = newspaper
newspaper_SOURCES = \
    animate.c \
    display.c \
    ledmatrix.c \
    font.c \
    newspaper.c \
    plugins.c \
    plugins/animation.c \
    aipointe.h \
    font.h \
    animate.h \
    ledmatrix.h \
    display.h \
    perso.h \
    plugins.h \
    plugins/animation.h \
    ini.c \
    ini.h

newspaper_CFLAGS=-DCONFDIR=\"${sysconfdir}/newspaper\" -DLIBDIR=\"${libdir}/newspaper/plugins\"
