ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libscrollh.la libscrollv.la libintervalle.la libblink.la libgif.la

libscrollh_la_SOURCES = scrollh.c
libscrollh_la_LDFLAGS = -version-info 0:0:0

libscrollv_la_SOURCES = scrollv.c
libscrollv_la_LDFLAGS = -version-info 0:0:0


libintervalle_la_SOURCES = intervalle.c
libintervalle_la_LDFLAGS = -version-info 0:0:0

libblink_la_SOURCES = blink.c
libblink_la_LDFLAGS = -version-info 0:0:0

libgif_la_SOURCES = gif.c
libgif_la_LDFLAGS = -version-info 0:0:0
