ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libmatrixScrollh.la libmatrixScrollv.la libmatrixIntervalle.la libmatrixBlink.la libmatrixGif.la

libmatrixScrollh_la_SOURCES = scrollh.c
libmatrixScrollh_la_LDFLAGS = -version-info 0:0:0

libmatrixScrollv_la_SOURCES = scrollv.c
libmatrixScrollv_la_LDFLAGS = -version-info 0:0:0


libmatrixIntervalle_la_SOURCES = intervalle.c
libmatrixIntervalle_la_LDFLAGS = -version-info 0:0:0

libmatrixBlink_la_SOURCES = blink.c
libmatrixBlink_la_LDFLAGS = -version-info 0:0:0

libmatrixGif_la_SOURCES = gif.c
libmatrixGif_la_LDFLAGS = -version-info 0:0:0
